--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -55,6 +55,7 @@ map-cluster-radius: 25 # size of clusters, from ~ 10 to 80
 # set either year-navigation or year-nav-increment to generate a year nav dropdown
 year-navigation: 100;200;300;400;500;600;700;800;900;1000 #"1900;1905;1910;1915;1920" # manually set years to appear in dropdown nav
 year-nav-increment: # set increments to auto gen nav years
+timeline-field: depth
 
 ##########
 # DATA 
