--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -43,6 +43,8 @@ locations-stopwords: # set of subjects separated by ; that will be removed from 
 # see _data/map-config.csv for field display options
 latitude: 43 #to determine center of map
 longitude: -100 #to determine center of map
+latitude-extant: 46.727485
+longitude-extant:
 zoom-level: 4 # zoom level for map 
 map-base: Esri_WorldStreetMap # set default base map, choose from: Esri_WorldStreetMap, Esri_NatGeoWorldMap, Esri_WorldImagery, OpenStreetMap_Mapnik
 map-search: true # not suggested with large collections
