rewrite letters feature as jekyll collection so we can redo it sometime...

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,12 @@ metadata: watkins
 #     extension: 'html' 
 #     filter: 'objectid'  
 
+# letters collection 
+
+collections: 
+  - letters
+
+
 ##########
 # Site/Organization Branding 
 #   Enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
