--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: Kooskia Internment Camp Scrapbook
 tagline: Documenting the daily life of Japanese Americans interned by the US Government near Kooskia, ID during World War II
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "The Kooskia Internment Camp Scrapbook is a hand-made manuscript consisting of 148 photographs (and two drawings) which document the sights, tasks and events of Japanese men incarcerated during the camp's two years of operation (May 1943 - May 1945). The camp was located in a remote area of north central Idaho, 30 miles from the town of Kooskia and administered by the U.S. Immigration and Naturalization Service (INS) for the U.S. Department of Justice."  
+description: "The Kooskia Internment Camp Scrapbook is a hand-made manuscript consisting of 148 photographs (and two drawings) which document the lives of Japanese American men incarcerated during the camp's two years of operation (May 1943 - May 1945). The camp was located in a remote area of north central Idaho, 30 miles from the town of Kooskia and administered by the U.S. Immigration and Naturalization Service (INS) for the U.S. Department of Justice."  
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho;history;inland northwest
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
