update calnon metadata compound object for interview files

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -61,7 +61,7 @@ year-nav-increment: 5 # set increments to auto gen nav years
 # 
 # add metadata fields for export in data downloads (tip: paste in first row of csv)
 # comma delimited list, reference url is automatic
-metadata-export-fields: "title,creator,description,subject,publisher,date,date is approximate,location,lat long,type,format,language,rights,rightsstatement,filename,date created,date modified,objectid"
+metadata-export-fields: "objectid,parentid,title,creator,description,subject,publisher,date,date is approximate,location,type,format,language,rights,rightsstatement,date created,date modified,cdm_url,cdmid,contentdm file name,contentdm file path,display_template,filename2,object_location,image_small,image_thumb"
 # generate a facets list for given fields, comma delimited
 metadata-facets-fields: "subject,creator,format"
 
@@ -72,7 +72,7 @@ metadata-facets-fields: "subject,creator,format"
 # Note, like other items, child objects will only appear in visualizations if they have the correct metadata (lat long for map; date for timeline)
 # select true below if you'd like your compound object's child objects to appear in any of the pages or features listed
 map-child-objects: true # true / false - if true, and if child item has latitude and longitude, child objects will be displayed on map
-timeline-child-objects: true # true / false - if true, and if child object has date, child objects will appear as thumbnails on timeline page
+timeline-child-objects: false # true / false - if true, and if child object has date, child objects will appear as thumbnails on timeline page
 data-child-objects: false # true / false - if true, child objects will appear linked in table on data page
 carousel-child-objects: false # true / false - if true, child objects will appear on homepage carousel
 browse-child-objects: false # true / false - if true, child objects will appear on browse page and child objects' metadata will populate cloud pages like Subjects page and Locations page, as well as featured terms boxes on the home page
