description with more context added to homepage

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: Latah County Historic Places
 tagline: Historic Sites Map by the Latah Preservation Commission
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "This project includes a historic sites touring map as well as contemporary and historic images of the locations to illustrate the ongoing significance of landmarks and structures"
+description: "This historic map project was a collaboration between the Latah Preservation Commission (LPC) and the University of Idaho Library. The LPC's printed map, while handy to keep in the car, cannot include high resolution photos of each historic site. This digital version of the touring map includes contemporary photos of each location as well as historic images to illustrate the ongoing significance of the highlighted structures and landmarks. Explore now!"
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: Latah County; Idaho; historic tour; historic map
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
