Edits to URLs and metadata

--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 # URL VARIABLES
 #
 # site domain, full URL to the production location of your collection
-url: https://www.lib.uidaho.edu/wwami
+url: https://www.lib.uidaho.edu/
 # path to location on the domain if necessary e.g. /digital/hjccc
-baseurl: /digital/demo
+baseurl: /digital/wwami
 # location of code, the full url to your github repository
 source-code: https://github.com/uidaholib/base-digital-collections-template
 
@@ -23,14 +23,14 @@ digital-assets: https://www.lib.uidaho.edu/assets
 # title of site appears in banner
 title: WWAMI Scrapbook
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Digital Collection Magic with Static Web Technologies
+tagline: Washington, Wyoming, Alaska, Montana and Idaho Medical Program Scrapbook
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-CSV is a template for creating digital collection exhibits using static web technology."
+description: WWAMI Scrapbook from 1971 to 1975.
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho;history;inland northwest
+keywords: idaho;history;inland northwest;medical;education
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: CollectionBuilder
+author: Brian Tibayan
 
 ##########
 # COLLECTION SETTINGS
