--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ digital-assets: https://www.lib.uidaho.edu/assets
 # title of site appears in banner
 title: Washington, Idaho & Montana Railway Records Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Maps and blueprints from the Washington, Idaho & Montana Railway Records.
+tagline: Maps and blueprints from the Washington, Idaho & Montana Railway Records
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: A digital collection of maps and blueprints from MG 139, Washington, Idaho & Montana (WI&M) Railway Records, 1903-1962. The items include diagrams of proposed housing plans and maps of the railway line.
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho;history;inland northwest
+keywords: idaho; history; inland northwest
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
