--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: WWAMI Scrapbook
 tagline: Washington, Wyoming, Alaska, Montana, and Idaho Medical Program Scrapbook
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: A scrapbook of photos, correspondence, and clippings documenting WWAMI's early years from 1971 to 1975. To view the entire scrapbook in a single file, visit the Concatenated Scrapbook page.
+description: A scrapbook of photos, correspondence, and clippings documenting WWAMI's early years from 1971 to 1975 which were documented for research purposes by the College of Agriculture and Life Sciences at the University of Idaho. To view the entire scrapbook in a single file, visit the <a href= "https://www.lib.uidaho.edu/digital/wwami/items/wwami_full.html">Combined Scrapbook</a> page.
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: medical education; WWAMI program; idaho; history; inland northwest
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
