update metadata with new items and clean up

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -61,9 +61,9 @@ year-nav-increment: 5 # set increments to auto gen nav years
 # 
 # add metadata fields for export in data downloads (tip: paste in first row of csv)
 # comma delimited list, reference url is automatic
-metadata-export-fields: "title,dates,start_date,end_date,year span,description,person of interest,document type,publisher,subject,location,file type,identifier_old,identifier,source,type,format,rightsstatement,language,date created,date modified,cdm_url,cdmid,contentdm file name,contentdm file path,objectid"
+metadata-export-fields: "title,dates,start_date,end_date,year_span,description,person of interest,document_type,publisher,subject,location,file_type,identifier_old,identifier,source,type,format,rightsstatement,language,date created,date modified,cdm_url,cdmid,contentdm file name,contentdm file path,objectid"
 # generate a facets list for given fields, comma delimited
-metadata-facets-fields: "subject,start_date,end_date,document type,file type"
+metadata-facets-fields: "subject,start_date,end_date,document_type,file type"
 
 ##########
 # Compound Objects 
