--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ title: Barnard-Stockbridge Photograph Collection
 tagline: Historical Photographs of Northern Idaho Mines, Towns, and Scenery, 1894-1964
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "The Barnard-Stockbridge Collection exhibits over 2000 photographs (and growing!), selected from over 200,000 nitrocellulose and glass plate negatives, taken by Nellie Stockbridge and T.N. Barnard during the years 1894-1964. The photos depict various aspects of life in the Wallace/Kellogg mining area."
+description: "The Barnard-Stockbridge Collection features over 3000 photographs selected from over 200,000 nitrocellulose and glass plate negatives taken by Nellie Stockbridge and T.N. Barnard during the years 1894-1964. The photos depict various aspects of life in the Wallace/Kellogg mining area."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho; history; inland northwest; mining; northern idaho towns
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
