--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Interior photos of mines in Butte, Montana, 1890, hundreds of feet belo
 # this description might appear in search result lists, keep around 160 characters max
 description: "Among the riches of the historical photograph collections of the University of Idaho Library is an oversize portfolio of eighty original Carleton E. Watkins photographs. Long considered lost, these photographs of the interior of the Anaconda Mines in Butte, Montana, were taken in 1890. They show early hard-rock mining techniques, equipment, and men deep underground."  
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: mining; underground mine interiors; Montana
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
