tweak metadata and config

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ title: Vernice and Sheldon Zadok Thayer Photograph Collection
 tagline: Photographs of Idaho and the Inland Northwest, 1938-1941
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-CSV is a template for creating digital collection exhibits using static web technology."
+description: "The Vernice and Sheldon Zadok Photograph Collection contains family and outdoor photos and correspondence from 1938-1941."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho; history; inland northwest
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
