--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ central-search:
 # title of site appears in banner
 title: Bovill Historical Photograph Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Photographs of Bovill from the collection of the Latah County Historical Society
+tagline: Photographs of Bovill between 1904 - 2000 from the collection of the Latah County Historical Society
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "Photographs of Bovill, Idaho from the collection of the Latah County Historical Society."
