--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Photographs, correspondence, interviews, and scrapbook materials relate
 # this description might appear in search result lists, keep around 160 characters max
 description: "This collection includes photographs and documents related to David Lewis (i.e. Cougar Dave) and the purchase of Taylor Ranch. Also included are interviews with Jess and Dorothy Taylor, who purchased Cougar Dave's ranch, and documents regarding the University of Idaho's purchase of the property from the Taylor Family."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; photographs
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
