--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Nature photographs taken by Ernest E. Day
 # this description might appear in search result lists, keep around 160 characters max
 description: "Photographs taken by Ernie Day depicting just a few of the many mountains and lakes found in Idaho, particularly those found within the Sawtooth National Recreation Area."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; geology; national parks
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Courtney Berge
 
