--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Materials from the NEH Funded Common Heritage Community Digitization Pr
 # this description might appear in search result lists, keep around 160 characters max
 description: "The Latah County Common Heritage Collection was driven by funding from a National Endowment for the Humanities (NEH) Common Heritage Grant awarded to the University of Idaho Library in 2016. The materials in this collection were collected via community digitization days held in Moscow and Potlatch in 2016 and 2017."  
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; Latah county; community
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
