--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Photographs from local Clifford M. Ott depicting northern Idaho as it w
 # this description might appear in search result lists, keep around 160 characters max
 description: "Clifford M. Ott donated this broad collection of historical photographs in 1992. Ott was an avid amateur photographer who amassed over 10,000 slides, prints, and negatives spanning the years from 1883 to 1990. The digital collection represents a selection from Ott's whole collection, which he compiled into eleven albums containing a total of over 1,800 images of Moscow and surrounding Latah County and used to educate local citizens."  
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; photography; Latah County; architecture; celebrations; landscapes
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
