--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Historical Photographs of Priest lake, Idaho and the surrounding area, 
 # this description might appear in search result lists, keep around 160 characters max
 description: "A digital collection comprised of 380 historical photographs documenting the waters, boats, buildings, landscapes, and people of the region around Priest Lake, Idaho." 
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; sports; lakes; camping; lumber
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
