--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Archive of documents, photographs, and interviews from the Selway-Bitte
 # this description might appear in search result lists, keep around 160 characters max
 description: "A collection of documents, photographs, and interviews from The Selway-Bitterroot Wilderness History Project." 
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: selway-bitterroot wilderness; idaho; history; inland northwest
+keywords: selway-bitterroot wilderness; idaho; history; podcast; oral history; natural science
 
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
