--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Photographs and documentation about the Silver and Gold Book
 # this description might appear in search result lists, keep around 160 characters max
 description: "The Silver and Gold Book was created to represent Moscow at the 1893 World's Columbian Exposition. Mrs. J.H. Forney delegated the task of designing a special work of art to then-president Franklin Gault, the university’s first art teacher Annette Bowman, and local jeweler R.M. Crockett."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: University of Idaho
+keywords: University of Idaho; World's Fair Exposition; ornamentation; decorative art
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: U of I Library Special Collections and Archives
 
