--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ tagline: Ranching, Hunting, and Pack Train Operations in North Central Idaho, 19
 # this description might appear in search result lists, keep around 160 characters max
 description: "A digital collection comprised of 540 historical photographs taken (mostly) by William Allen Stonebraker at the turn of the century and into the 1920s and 1930s documenting the Salmon River, the Frank Church-River of No Return, the Chamberlain Basin, and the Thunder Mountain Gold Rush."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho; history; inland northwest
+keywords: idaho; history; forests; horses; nature photography; wilderness photography; rivers
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
